# KGMiner

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  Readme.md  aapp_dsyn.csv  bestseller.csv  civil_war.csv  company_president.csv  compile.sh  gngm_celf.csv  gngm_celf.fullpath.csv  president.csv  run_server.sh  run_test.sh  state_capital.csv
Rscript/: aapp_dsyn.R  battle_commander.R  capital_state.R  city_capital.R  experimentAPI.R  experiment_template.R  feature_selection.R  fiction_author.R  gbserverAPI.R  gngm_celf.R  interpret.R  meatpath_predicate.R  president_company.R  president_us.R  robustness.R  time_consumption.R  top_related_rels.R
src/: main.cpp  opts.cpp  opts.h  rdf_parser.cpp  rdf_parser.h
src/gbclient/: main.cpp  socket_client.h
src/gbserver/: edge_list.cpp  edge_list.h  edge_loader.h  graph.h  main.cpp  node_loader.h  opts.cpp  opts.h  socket_server.h  type_loader.h
src/parser/: opts.cpp  opts.h  rdf_parser.cpp
utils/: command_generator.py  dbpedia_to_tsv.py  experimentAPI.R  experiment_template.R  feature_selection_test.R  gbpedia.R  gbserverAPI.R  generate_simrank_cmd.R  get_id_by_rel.py  graph_to_amie.py  lobbyist_to_graph.py  semantic_node_to_id.py  semmed_counter.py  semmed_to_graph.py  simrank.cpp
